tests/type-errors/15-lambda-annot-wrong-body.flt
// LambdaAnnot with type error in body (int parameter used with bool operator)
// --- Command: dotnet run --project FunLang -- --emit-type --expr "fun (x: int) -> x && true" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected int but got bool
 --> <expr>:1:16-17
   = due to annotation: <expr>:1:0-25
   = note: expected int due to annotation at <expr>:1:0-25
   = hint: The type annotation at <expr>:1:0-25 expects int
